
icon:plus[] Elasticsearch: It is now possible to define Elasticsearch settings / mappings per language. This helps using language specific stemmers or stop word lists. Please refer to the link:{{< relref "elasticsearch.asciidoc" >}}#language-override[documentation] for more information.

[[v1.4.8]]
== 1.4.8 (21.04.2020)

icon:check[] Clustering: The coordinator layer feature will now exclude redirection for requests to the `/api/v2/health/live` and `/api/v2/health/ready` endpoints.

icon:check[] OAuth2: The write lock will now also be utilized when mapping JWT's.

[[v1.4.7]]
== 1.4.7 (21.04.2020)

icon:plus[] Server: The `/api/v2/raml` endpoint can now only be accessed by admin users.

icon:plus[] Server: Admin users can now always see the `serverTokens` regardless of the `serverTokens` setting.

icon:checked[] Elasticsearch: Fixed a bug that prevented Elasticsearch synchronization of projects after deleting a role. link:https://github.com/gentics/mesh/issues/1041[#1041]

[[v1.4.6]]
== 1.4.6 (20.04.2020)

icon:plus[] Clustering/Graph: The already existing `synchronizeWrites` feature has been extended. A cluster-wide write lock will now be used when running in clustered mode. This drastically reduces contention. The lock will also be used when new instances join the cluster to prevent synchronization issues with distributed transactions.

icon:plus[] Graph: The internal transaction handling has been refactored and unified to better accommodate the new global write lock mechanism.

icon:check[] Clustering: The cluster startup and shutdown processes have been modified to be less error prone. Hazelcast will now be started before OrientDB. Cluster instances now join the cluster sequentially instead of parallel. This results in a slower but more stable cluster startup process. The shutdown process will now avoid a write gap in which already dispatched distributed transactions could potentially be lost.

[[v1.4.5]]
== 1.4.5 (17.04.2020)
